tests/error/struct/struct_mut.mml
type s = {a: int;}

let s = {a = 3; } in s.a <- 3
